# dbt-cloud-download-artifacts-action

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  action.yml  dbt-bouncer.yml  makefile  pyproject.toml
.github/workflows/: ci_pipeline.yml  post_merge_pipeline.yml  release_pipeline.yml  test_action.yml
dbt_project/: dbt_project.yml
dbt_project/models/: my_model.sql
src/dbt_cloud_download_artifacts_action/: dbt_cloud_helpers.py  github_helpers.py  logger.py  main.py  utils.py  version.py
tests/: pytest_helpers.py  test_dbt_cloud_helpers.py  test_github_helpers.py  test_logger.py  test_main.py  test_version.py
